better sentence structure in a yanovsky paragraph

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -232,7 +232,7 @@ There is a natural family of examples of such functions: at any prime \(p\), set
 \end{align*}
 without any handwaving about summation.
 
-In another direction, the function \[|X| = \sum_{x_0 \in \pi_0 X} \prod_{n=1}^\infty |\pi_n (X, x_0)|^{(-1)^n} \in \Q_{\ge 0}\] was shown to be a homotopy cardinality function (on \(p\)--local \(\pi\)--finite spaces) by Baez and Dolan~\cite{BaezDolan}.  In the same toy setting as above, we compute \[|B\Z/p| = \frac{1}{p}.\]  This is quite a curiosity, to get the same value as with the regularized sum, and Baez and Dolan conjectured that whenever these formulas could be simultaneously made sense of, they would agree.  Yanovsky demonstrated this conjecture to be true: taking \(p \ge 2\), he showed that the function \(n \mapsto \chi_{n, p}(X)\) extends uniquely to a dyadic analytic function \(\widehat L_{X,p}\co \Z^\wedge_2 \to \Z^\wedge_2\) and that the Baez--Dolan function appears as \(\widehat L_{X,p}(-1)\).  This justifies \(p\)--adic analytic continuation formulas relating the two invariants, such as \[\widehat L_{\OS{H\Z/p}{m}, p}(-1) = p^{\binom{-1}{m}} = p^{(-1)^m} = |\OS{H\Z/p}{m}|.\]
+In another direction, the function \[|X| = \sum_{x_0 \in \pi_0 X} \prod_{n=1}^\infty |\pi_n (X, x_0)|^{(-1)^n} \in \Q_{\ge 0}\] was shown to be a homotopy cardinality function (on \(p\)--local \(\pi\)--finite spaces) by Baez and Dolan~\cite{BaezDolan}.  In the same toy setting as above, we compute \[|B\Z/p| = \frac{1}{p}.\]  It is quite a curiosity to get the same value as the regularized sum, and Baez and Dolan conjectured that whenever these formulas could be simultaneously made sense of, they would agree.  Yanovsky demonstrated this conjecture to be true: taking \(p > 2\), he showed that the function \(n \mapsto \chi_{n, p}(X)\) extends uniquely to a dyadic analytic function \(\widehat L_{X,p}\co \Z^\wedge_2 \to \Z^\wedge_2\) and that the Baez--Dolan function appears as \(\widehat L_{X,p}(-1)\).  This justifies \(p\)--adic analytic continuation formulas relating the two invariants, such as \[\widehat L_{\OS{H\Z/p}{m}, p}(-1) = p^{\binom{-1}{m}} = p^{(-1)^m} = |\OS{H\Z/p}{m}|.\]
 
 
 
