loopgroup -> loop group

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -338,11 +338,11 @@ In a yet different direction, Lurie's approach to the reinterpretation of the \(
 
 \subsection*{Index theorems}
 
-In closing the book, we finally address the lurking physical inspiration for the \(\sigma\)--orientation.  One of the most remarkable developments of modern physics, from the perspective of a mathematician, is their ability to ``guess'' the Atiyah--Singer index theorem~\cite[Section 8.6]{Takhtajan}: there is a path integral formulation for the supertrace of the Dirac operator on a \(\Spin\) manifold \(M\) which expresses it as the time evolution of a massive supersymmetric particle evolving through \(M\), and standard expansions for this physical system lead directly to the discovery of the \(\widehat A\)--genus and, ultimately, the index formula \[\operatorname{ind}\, /\!\!\!\partial_+ = \operatorname{Tr}_s \mathrm e^{-H} = (2 \pi \mathrm i)^{-\frac{n}{2}} \int_M \widehat A(M).\]  The \(\sigma\)--orientation was uncovered by Witten when studying the free loopspace \(\L M\) of the manifold \(M\), which is indeed a natural space to consider when studying string theory on \(M\).  The condition that \(M\) be \(\String\) is exactly the precondition that \(\L M\) be \(\Spin\), so that an analogous Dirac operator exists.  The \(\sigma\)--orientation then arises when trying to express a formula for the index of the Dirac operator on the free loopspace in terms of invariants of \(M\) and using analogous path integral methods~\cite{SegalEll}.
+In closing the book, we finally address the lurking physical inspiration for the \(\sigma\)--orientation.  One of the most remarkable developments of modern physics, from the perspective of a mathematician, is their ability to ``guess'' the Atiyah--Singer index theorem~\cite[Section 8.6]{Takhtajan}: there is a path integral formulation for the supertrace of the Dirac operator on a \(\Spin\) manifold \(M\) which expresses it as the time evolution of a massive supersymmetric particle evolving through \(M\), and standard expansions for this physical system lead directly to the discovery of the \(\widehat A\)--genus and, ultimately, the index formula \[\operatorname{ind}\, /\!\!\!\partial_+ = \operatorname{Tr}_s \mathrm e^{-H} = (2 \pi \mathrm i)^{-\frac{n}{2}} \int_M \widehat A(M).\]  The \(\sigma\)--orientation was uncovered by Witten when studying the free loopspace \(\L M\) of the manifold \(M\)---indeed, a natural space to consider when studying string theory on \(M\).  The condition that \(M\) be \(\String\) is exactly the precondition that \(\L M\) be \(\Spin\), so that an analogous Dirac operator exists.  The \(\sigma\)--orientation then arises when trying to express a formula for the index of the Dirac operator on the free loopspace in terms of invariants of \(M\) and using analogous path integral methods~\cite{SegalEll}.
 
 Because of the predictive power of the physical apparatus, one might hope to uncover other types of analytic data from it---for instance, a geometric theory of elliptic cohomology.\footnote{In a different direction, there is also a less-discussed physical system that has produced models for the infinite loopspaces associated to topologically familiar spectra, such as \(KU\) and \(KO\)~\cite{Kitaev}.  Variations on the same idea are also conjectured to produce models for many more, such the Anderson duals of various bordism spectra, including (in the case of stably framed bordism) the Anderson dualizing object itself---largely considered to be a resolutely un-geometric object!}  In addition to the variant of bordism theory described far above, the most long-standing program is due to Stolz and Teichner~\cite{StolzTeichnerWhatIs,StolzTeichnerSusy}, though it is not alone even among physically-inspired theories (for instance, see \cite{DouglasHenriques} as well as many other papers by the same authors).
 
-One of the remarkable features of loop groups is that this process does not appear to be iterable: the theory of compact Lie groups is exceedingly nice (for instance: they have surjective exponential maps), the theory of loopgroups formed from compact Lie groups is only slightly less nice (for instance: they have dense exponential maps), and any extension of this seems to immediately go to pot.\footnote{For instance, little positive is known about the group of free ``tori'', i.e., the loop group of a loop group.}  Finding the ``next step'' after loop groups is an extremely difficult problem that requires such inventive thinking that it could only open enormous avenues for generalization.
+One of the remarkable features of loop groups is that this process does not appear to be iterable: the theory of compact Lie groups is exceedingly nice (for instance: they have surjective exponential maps), the theory of loop groups formed from compact Lie groups is only slightly less nice (for instance: they have dense exponential maps), and any extension of this seems to immediately go to pot.\footnote{For instance, little positive is known about the group of free ``tori'', i.e., the loop group of a loop group.}  Finding the ``next step'' after loop groups is an extremely difficult problem that requires such inventive thinking that it could only open enormous avenues for generalization.
 
 
 
