--- a/ass.tex
+++ b/ass.tex
@@ -18,9 +18,9 @@
 \class(0,0)
 
 % multiples of eta
-\etaclass["\eta"]
-\etaclass["\eta^2"]
-\etaclass["\eta^3"]
+\etaclass["{\eta = h_1}" {below, xshift=0.25cm}]
+\etaclass["\eta^2" above]
+\etaclass["\eta^3" above]
 
 % h0 tower
 \foreach \y in {1,...,12} {
@@ -30,13 +30,13 @@
 
 % divisibilities of nu
 \class(3,2) \structline(3,2)(3,3)
-\class["\nu"](3,1) \structline(3,1)(3,2)
+\class["{\nu = h_2}" below](3,1) \structline(3,1)(3,2)
 
 \class["\nu^2"](6,2)
 
-\class["\sigma"](7,1)
+\class["{\sigma = h_3}" below](7,1)
 \etaclass
-\etaclass["\nu^3"]
+\etaclass["\nu^3" right]
 \class(7,2) \structline(7,2)(7,1)
 \class(7,3) \structline(7,3)(7,2)
 \class(7,4) \structline(7,4)(7,3)
@@ -47,7 +47,7 @@
 
 \sseqset{above left label distance=0.3em}
 
-\class["c_0" above left](8,3)
+\class["c_0" above](8,3)
 \etaclass
 
 \class(11,6) \structline(11,6)(11,7)
@@ -56,7 +56,7 @@
 \class["\sigma^2"](14,2)
 \class(14,3) \structline(14,3)(14,2)
 
-\class["h_4"](15,1)
+\class["h_4" below](15,1)
 \etaclass
 \etaclass
 \etaclass
@@ -69,7 +69,7 @@
 \class(14,5) \structline(14,5)(14,4)
 \class(14,6) \structline(14,6)(14,5)
 
-\class["P c_0" above left](16,7)
+\class["P c_0" {above, xshift=-0.2cm}](16,7)
 \etaclass
 \structline[densely dotted](16,7)(15,4)
 
@@ -77,7 +77,7 @@
 \class(17,5)
 \class(17,6)
 \structline(17,5)(17,4)
-\class["P^2 h_1" above left](17,9)
+\class["P^2 h_1" {above, xshift=-0.2cm}](17,9)
 \etaclass
 \structline(17,6)(17,5)
 \structline(17,7)(17,6)
