--- a/unknowns.tex
+++ b/unknowns.tex
@@ -43,7 +43,7 @@ Our first major project in this text, which culminated in \Cref{MOSplitsIntoHF2s
     \item These results then similarly assemble to yield a splitting at the level of \(2\)--complete spectra through Adams spectral sequence methods.\footnote{Replacing \(2\) by \(p\) everywhere, one can also produce odd-primary results.}
 \end{enumerate}
 
-For instance, by studying the homology of \(M\SO\), one finds that the unit class in \(\HFtwo_* M\SO\) generates the submodule~\cite[Lemma 20.38]{Switzer} \[1 \cdot \mathcal A_* \mmod (\Sq^1) \subseteq \HFtwo_* M\SO,\] and an appropriate generalization of Milnor--Moore then gives a splitting \[M\SO \simeq \left( \bigvee_j \Susp^{n_j} \HFtwo \right) \vee \left( \bigvee_k \Susp^{m_k} H\Z \right).\]  Similarly, the homology of \(M\Spin\) reveals an inclusion~\cite{ABS,ABP,GiambalvoPengelley} \[1 \cdot \mathcal A_* \mmod (\Sq^1, \Sq^2) \subseteq \HFtwo_* M\Spin,\] and a further generalization of Milnor--Moore ultimately produces a splitting\footnote{However, this time the splitting is not one of ring spectra.} \[M\Spin \simeq \left( \bigvee_j kO[n_j, \infty)\right) \vee \left( \bigvee_k \Susp^{m_k} H\F_2 \right).\]  When studying \(M\String\), one finds that there is an inclusion \[1 \cdot \mathcal A_* \mmod (\Sq^1, \Sq^2, \Sq^4) \subseteq \HFtwo_* M\String,\] but at this point the Adams spectral sequence becomes too intricate to analyze effectively and no analogous splitting of \(M\String\) has yet been produced.\footnote{See, however, recent work of Laures--Schuster~\cite{LauresSchuster}.}\footnote{There are also complex analogues of these results:
+For instance, by studying the homology of \(M\SO\), one finds that the unit class in \(\HFtwo_* M\SO\) generates the submodule~\cite[Lemma 20.38]{Switzer} \[1 \cdot \mathcal A_* \mmod (\Sq^1) \subseteq \HFtwo_* M\SO,\] and an appropriate generalization of Milnor--Moore then gives a splitting \[M\SO \simeq \left( \bigvee_j \Susp^{n_j} \HFtwo \right) \vee \left( \bigvee_k \Susp^{m_k} H\Z \right).\]  Similarly, the homology of \(M\Spin\) reveals an inclusion~\cite{ABS,ABP,GiambalvoPengelley} \[1 \cdot \mathcal A_* \mmod (\Sq^1, \Sq^2) \subseteq \HFtwo_* M\Spin,\] and a further generalization of Milnor--Moore ultimately produces a splitting\footnote{However, this time the splitting is not one of ring spectra.} \[M\Spin \simeq \left( \bigvee_j kO[n_j, \infty)\right) \vee \left( \bigvee_k \Susp^{m_k} H\F_2 \right).\]  When studying \(M\String\), one finds that there is an inclusion \[1 \cdot \mathcal A_* \mmod (\Sq^1, \Sq^2, \Sq^4) \subseteq \HFtwo_* M\String,\] but at this point the Adams spectral sequence becomes too intricate to analyze effectively and no analogous splitting of \(M\String\) has yet been produced.\footnote{See, however, recent work of Laures--Schuster~\cite{LauresSchuster}.}\footnote{There are also \(p\)--local complex analogues of these results:
 \[
 MU \simeq \bigvee_j \Susp^{n_j} BP, \quad
 M\SU \simeq \left(\bigvee_j \Susp^{n_j} BP\right) \vee \left(\bigvee_k \Susp^{m_k} BoP \right),
@@ -62,7 +62,7 @@ In addition to these splittings, there is also a collection of Landweber-type re
     M\Spin_*(X) \otimes_{M\Spin_*} KO_* & \xrightarrow\cong KO_*(X), \\
     M\Spin^c_*(X) \otimes_{M\Spin^c_*} KU_* & \xrightarrow\cong KU_*(X),
     \end{align*}
-    where \(\Spin^c := \Spin \times_{O(1)} U(1)\) is a certain complex analogue of the \(\Spin\) group.
+    where \(\Spin^c := O \times_{O[0, 2]} U[0, 2]\) is the first in a family of certain amalgams of the the orthogonal and unitary groups.
     \item Ochanine~\cite{OchanineSUModules} demonstrates the following non-result: \[M\SU_*(X) \otimes_{M\SU_*} KO_* \xrightarrow{\not\cong} KO_*(X).\]  In particular, this highlights the importance of the Hopkins--Hovey result above: although \(KO\) also receives an \(MSU\)--orientation, this information is not enough to recover \(KO\) by Landweber-type techniques.
     \item Landweber, Ravenel, and Stong~\cite{LandweberEll,LRS} originally constructed a variant of elliptic cohomology according to the following formula:  \[M\SO_*(X) \otimes_{M\SO_*} \left.\Z\left[\frac{1}{6}, \delta, \eps, \Delta, \Delta^{-1}\right] \middle/ \left(2^6 \eps (\delta^2 - \eps)^2 - \Delta\right)\right. =: \mathit{Ell}^*(X).\]
 \end{itemize}
