fix "availa" typo

--- a/sigma.tex
+++ b/sigma.tex
@@ -1340,7 +1340,7 @@ We begin at the maximally simple situation, where \(2\) is inverted.  In this ca
 \OS{(-)}{6}: & \OS{kO}{6} \arrow{r} & BU[6, \infty) \arrow{r} & B\String.
 \end{tikzcd}
 \end{center}
-Next, by recognizing \(c\co kO \to kU\) as the complexification map, we note that it lies in fixed points for complex-conjugation on \(kU\).  Having inverted \(2\), we availa ourselves of an idempotent selecting these fixed point subspectra:
+Next, by recognizing \(c\co kO \to kU\) as the complexification map, we note that it lies in fixed points for complex-conjugation on \(kU\).  Having inverted \(2\), we avail ourselves of an idempotent selecting these fixed point subspectra:
 \begin{align*}
 P_+ & = \frac{1 + \xi}{2}, &
 P_- & = \frac{1 - \xi}{2},
