change Spin^c to Spin^{\C}

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -60,9 +60,9 @@ In addition to these splittings, there is also a collection of Landweber-type re
     \item Hopkins and Hovey~\cite[Theorem 1]{HopkinsHovey} demonstrate the following:
     \begin{align*}
     M\Spin_*(X) \otimes_{M\Spin_*} KO_* & \xrightarrow\cong KO_*(X), \\
-    M\Spin^c_*(X) \otimes_{M\Spin^c_*} KU_* & \xrightarrow\cong KU_*(X),
+    M\Spin^{\C}_*(X) \otimes_{M\Spin^{\C}_*} KU_* & \xrightarrow\cong KU_*(X),
     \end{align*}
-    where \(\Spin^c := O \times_{O[0, 2]} U[0, 2]\) belongs to a family of amalgams of the the orthogonal and unitary groups.
+    where \(\Spin^{\C} := O \times_{O[0, 2]} U[0, 2]\) belongs to a family of amalgams of the the orthogonal and unitary groups.
     \item Ochanine~\cite{OchanineSUModules} demonstrates the following non-result: \[M\SU_*(X) \otimes_{M\SU_*} KO_* \xrightarrow{\not\cong} KO_*(X).\]  In particular, this highlights the importance of the Hopkins--Hovey result above: although \(KO\) also receives an \(MSU\)--orientation, this information is not enough to recover \(KO\) by Landweber-type techniques.
     \item Landweber, Ravenel, and Stong~\cite{LandweberEll,LRS} originally constructed a variant of elliptic cohomology according to the following formula:  \[M\SO_*(X) \otimes_{M\SO_*} \left.\Z\left[\frac{1}{6}, \delta, \eps, \Delta, \Delta^{-1}\right] \middle/ \left(2^6 \eps (\delta^2 - \eps)^2 - \Delta\right)\right. =: \mathit{Ell}^*(X).\]
 \end{itemize}
