fix bad (but inconsequential) lower bound

--- a/powerops.tex
+++ b/powerops.tex
@@ -840,7 +840,7 @@ The Thom spectrum of the map \(BJ\) is presented by the pushout of \(E_\infty\)-
 \end{lemma}
 
 \begin{corollary}[{\cite[Section 4]{ABGHR}, \cite[Section IV.3]{MayRingSpacesSpectra}}]
-There is a natural equivalence between the space of null-homotopies of the composite \[g \xrightarrow j \gl_1 \S \xrightarrow{\gl_1 \eta_R} \gl_1 R\] and the space of \(E_\infty\)--ring maps \(MG \to R\), where \(MG\) is the Thom spectrum of the stable spherical bundle classified by \(J\).\footnote{The underlying infinite loopspace \(\GL_1 R\) also plays a role in the theory of Thom isomorphisms at the level of individual bundles: \(R\)--orientations of a spherical bundle \(X \to \GL_1 \S\) biject with null-homotopies of the composite \(X \to \GL_1 \S \to \GL_1 R\).  As an example consequence, first note that the sequence of maps \[BO \xrightarrow{j} \GL_1 \S \to \GL_1 KO\] is a \(2\)--equivalence.  It thus follows that if the the tangent bundle of a manifold \(\tau\co M \to BO\) admits a Thom isomorphism in \(KO\)--homology, then there exists a lift \(\widetilde\tau\co M \to BO(3, \infty) = B\Spin\).}
+There is a natural equivalence between the space of null-homotopies of the composite \[g \xrightarrow j \gl_1 \S \xrightarrow{\gl_1 \eta_R} \gl_1 R\] and the space of \(E_\infty\)--ring maps \(MG \to R\), where \(MG\) is the Thom spectrum of the stable spherical bundle classified by \(J\).\footnote{The underlying infinite loopspace \(\GL_1 R\) also plays a role in the theory of Thom isomorphisms at the level of individual bundles: \(R\)--orientations of a spherical bundle \(X \to \GL_1 \S\) biject with null-homotopies of the composite \(X \to \GL_1 \S \to \GL_1 R\).  As an example consequence, first note that the sequence of maps \[BO \xrightarrow{j} \GL_1 \S \to \GL_1 KO\] is a \(2\)--equivalence.  It thus follows that if the the tangent bundle of a manifold \(\tau\co M \to BO\) admits a Thom isomorphism in \(KO\)--homology, then there exists a lift \(\widetilde\tau\co M \to BO[3, \infty) = B\Spin\).}
 \end{corollary}
 \begin{proof}
 Applying the mapping space functor \(\EinftyRings(-, R)\) to the pushout diagram in the Lemma, we have a pullback diagram of mapping spaces:
