even-periodicity assumption slipped through

--- a/sigma.tex
+++ b/sigma.tex
@@ -852,7 +852,7 @@ where the horizontal maps are the action maps defining torsors and the vertical 
 \end{lemma}
 
 \begin{corollary}\label{BU6Triumvirate}
-Take \(E\) to be \emph{complex--orientable}.  There is then an isomorphism \[C^3(\CP^\infty_E; \sheaf I(0)) \cong \Spec E_0 MU[6, \infty).\]  Moreover, the \(E_0\)--points of this scheme biject with ring spectrum maps\index{orientation!MU six@\(MU[6, \infty)\)} \[\pushQED{\qed}MU[6, \infty) \to E. \qedhere\popQED\]
+Take \(E\) to be even-periodic.  There is then an isomorphism \[C^3(\CP^\infty_E; \sheaf I(0)) \cong \Spec E_0 MU[6, \infty).\]  Moreover, the \(E_0\)--points of this scheme biject with ring spectrum maps\index{orientation!MU six@\(MU[6, \infty)\)} \[\pushQED{\qed}MU[6, \infty) \to E. \qedhere\popQED\]
 \end{corollary}
 
 \begin{lemma}\label{MSUToMU6}
