some more typography

--- a/finite.tex
+++ b/finite.tex
@@ -1024,7 +1024,7 @@ Having constructed these chromatic homology theories, for the rest of this Lectu
 Every homotopy class \(\alpha \in \pi_{\ge 1} \S\) is nilpotent.\footnote{``Nilpotent'' has two equivalent interpretations here: the maps \(\alpha^{\sm n}\co \S^{\sm n} \to \S^{\sm n}\) and \(\alpha^{\circ n}\co \S \to \S\) are naturally equivalent.  In fact, these two kinds of nilpotence continue to agree for more general ring spectra~\cite[Introduction]{DHS}.} \qed
 \end{theorem}
 
-\noindent People studying \(K\)--theory in the '\(70\)s discovered the following related phenomenon:
+\noindent People studying \(K\)--theory uncovered the following related phenomenon:
 
 \begin{theorem}[{\cite[Theorem 12.1]{AdamsJXIV}}]\label{AdamsSelfMapThm}
 Let \(M_{2n}(p)\) denote the mod--\(p\) Moore spectrum with bottom cell in degree \(2n\).  Then there is an index \(n\) and a map \index{vd self map@\(v_d\)--self--map}\(v\co M_{2n}(p) \to M_0(p)\) such that \(KU_* v\) acts by multiplication by the \(n\)\textsuperscript{th}\, power of the Bott class.  The minimal such \(n\) is given by the formula
@@ -1056,14 +1056,14 @@ However, taking this as input, they are easily able to show several other intere
 A ring spectrum \(E\) detects nilpotence if and only if for all \(0 \le d \le \infty\) and for all primes \(p\), \(K(d)_* E \ne 0\) (i.e., the support of \(\context{MU}(E)\) is not a proper substack of \(\context{MU}\)).
 \end{corollary}
 \begin{proof}
-If \(K(d)_* E = 0\) for some \(d\), then the non-nilpotent unit map \(\S \to K(d)\) lies in the kernel of the Hurewicz homomorphism for \(E\), so \(E\) fails to detect nilpotence.
+If \(K(d)_* E = 0\) for some \(d\), then the unit map \(\S \to K(d)\) lies in the kernel of the Hurewicz homomorphism for \(E\), so \(E\) fails to detect nilpotence.
 
 In the other direction, suppose that for every \(d\) we have \(K(d)_* E \ne 0\).  Because \(K(d)_*\) is a field, it follows by picking a basis of \(K(d)_* E\) that \(K(d) \sm E\) is a nonempty wedge of suspensions of \(K(d)\).  So, for \(\alpha \in \pi_* R\), if \(E_* \alpha = 0\) then \((K(d) \sm E)_* \alpha = 0\) and hence \(K(d)_* \alpha = 0\).  So, we need to show that if \(K(d)_* \alpha = 0\) for all \(n\) and all \(p\) then \(\alpha\) is nilpotent.  Taking \Cref{DevinatzHopkinsSmith} as given, it would suffice to show merely that \(MU_* \alpha\) is nilpotent.  This is equivalent to showing that the ring spectrum \(MU \sm R[\alpha^{-1}]\) is contractible, which is equivalent to showing that the unit map is null: \[\S \to MU \sm R[\alpha^{-1}].\]
 
-A nontrivial result of Johnson and Wilson shows that the following conditions are equivalent:\footnote{Specifically, it is immediate that \(MU_* X = 0\) forces \(P(d+1)_* X = 0\) and \(v_{d'}^{-1} P(d')_*(X) = 0\) for all \(d' < d\).  What's nontrivial is showing that \(v_{d'}^{-1} P(d')_*(X) = 0\) if and only if \(K(d')_*(X) = 0\)~\cite[Theorem 2.1.a]{RavenelLocalizationWRTPeriodic},~\cite[Section 3]{JohnsonWilson}.}
+A nontrivial result of Johnson and Wilson shows that the following conditions are equivalent:
 \begin{enumerate}
     \item \(MU_* X = 0\) holds.
-    \item For any \(d < \infty\), \(K([0, d])_* X = 0\) and \(P(d+1)_* X = 0\) hold.
+    \item For any \(d < \infty\), \(K([0, d])_* X = 0\) and \(P(d+1)_* X = 0\) hold.\footnote{It is immediate that \(MU_* X = 0\) forces \(P(d+1)_* X = 0\) and \(v_{d'}^{-1} P(d')_*(X) = 0\) for all \(d' < d\).  What's nontrivial is showing that \(v_{d'}^{-1} P(d')_*(X) = 0\) if and only if \(K(d')_*(X) = 0\)~\cite[Theorem 2.1.a]{RavenelLocalizationWRTPeriodic},~\cite[Section 3]{JohnsonWilson}.}
     \item There exists a \(d < \infty\) such that \(K([0, d])_* X = 0\) and \(P(d+1)_* X = 0\) hold.
 \end{enumerate}
 Taking \(X = R[\alpha^{-1}]\), we have assumed that \(K([0, d])_* X = 0\), but we have not made a direct assumption on \(P(d+1)_* X\).  However, we have \[\colim_d P(d+1) \simeq \HFp \simeq K(\infty),\] and we have assumed \(\S \to K(\infty) \sm R[\alpha^{-1}]\) to be null.  By compactness of \(\S\), that null-homotopy factors through some finite stage \(P(d+1) \sm R[\alpha^{-1}]\) for \(d \gg 0\).
