compress a couple of lines

--- a/powerops.tex
+++ b/powerops.tex
@@ -480,13 +480,10 @@ where \(s\) is an \(H_\infty\)--ring map. \qed
 \begin{example}[{\cite[Section 2.7]{Ando}, cf.\ \Cref{ArtinHasseExponential}}]
 The usual coordinate on \(\G_m\) with \(x +_{\G_m} y = x + y - xy\) satisfies the norm-coherence condition.  We compute directly in the case of the canonical subgroup:
 \begin{align*}
-(p = 2) & & N_{[2]}(x) & = x(x +_{\G_m} 2) \\
-& & & = x (x + 2 - 2x) \\
-& & & = 2x - x^2 = 2^*(x), \\
-(p > 2) & & N_{[p]}(x) & = \prod_{j=0}^{p-1} (x +_{\G_m} (1 - \zeta^j)) \\
-& & & = \prod_{j=0}^{p-1} (x + (1 - \zeta^j) - x(1 - \zeta^j)) \\
-& & & = \prod_{j=0}^{p-1} (1 - \zeta^j(1 - x)) \\
-& & & = (1 - (1 - x)^p) = p^*(x).
+N_{[2]}(x) & = x(x +_{\G_m} 2) \tag{\(p = 2\)} \\
+& = x (x + 2 - 2x) = 2x - x^2 = 2^*(x), \\
+N_{[p]}(x) & = \prod_{j=0}^{p-1} (x +_{\G_m} (1 - \zeta^j)) \tag{\(p > 2\)} \\
+& = \prod_{j=0}^{p-1} (1 - \zeta^j(1 - x)) = (1 - (1 - x)^p) = p^*(x).
 \end{align*}
 This is exactly the computation that \(g_{[p]}^* \psi_{[p]}^*(x) = p^*\) and \(N_{[p]}(x)\) agree for this choice of \(x \in \sheaf O_{\G_m}\).
 \end{example}
