be specific about what alpha / h elements in 3.6.23

--- a/finite.tex
+++ b/finite.tex
@@ -1388,7 +1388,7 @@ In the broader literature, the phrase ``Greek letter elements'' typically refers
 \end{remark}
 
 \begin{remark}[{\cite{AdamsAtiyah}, \cite[Section 5.2]{RavenelGreenBook}}]
-The second solution of the Hopf invariant one problem, due to Adams and Atiyah, can be rephrased in this language.  As discussed in \Cref{HopfInvariant1ExampleMO}, the ``Hopf invariant one problem'' refers to the question of whether the \(1\)--cocycles \(h_j\) in the \(\HFtwo\)--Adams spectral sequence are permanent cycles, thereby producing stable homotopy classes.  The orientation \(BP \to \HFtwo\) induces a map of Adams spectral sequences, so that if \(h_j\) were to survive to detect a class, that class would also be present in the \(BP\)--Adams spectral sequence, and its filtration degree would be not more than that of \(h_j\), which lies in degree \(1\).  In turn, the \(BP\)--Adams \(E_2\)--term can be computed by an ad\`elic complex~\cite{BeilinsonAdeles,Huber}, which is itself the target of a \v{C}ech-type spectral sequence known internally to chromatic homotopy theory as the \textit{chromatic spectral sequence}\index{chromatic spectral sequence}~\cite[Section 3]{MRW}, \cite[Equation 4.60]{Wilson}: \[E^2_{*,*,d} = H^*(\moduli{fg}; v_d^{-1} BP_* / (p^\infty, v_1^\infty, \ldots, v_{d-1}^\infty)\widetilde{\quad}) \Rightarrow H^*(\moduli{fg} \times \Spec \Z_{(p)}).\]  The \(1\)--line of this spectral sequence is entirely governed by \Cref{piLK1SExample}, and by finishing the even--primary form of that calculation, one discovers that the \(2\)--divisibilities of the relevant \(\alpha\)--elements are too low to produce \emph{any} classes on the classical Adams \(1\)--line.  It follows that the elements that start life on the classical Adams \(1\)--line cannot be permanent cycles, lest they contribute to a contradiction.
+The second solution of the Hopf invariant one problem, due to Adams and Atiyah, can be rephrased in this language.  As discussed in \Cref{HopfInvariant1ExampleMO}, the ``Hopf invariant one problem'' refers to the question of whether the \(1\)--cocycles \(h_j\) in the \(\HFtwo\)--Adams spectral sequence are permanent cycles, thereby producing stable homotopy classes.  The orientation \(BP \to \HFtwo\) induces a map of Adams spectral sequences, so that if \(h_j\) were to survive to detect a class, that class would also be present in the \(BP\)--Adams spectral sequence, and its filtration degree would be not more than that of \(h_j\), which lies in degree \(1\).  In turn, the \(BP\)--Adams \(E_2\)--term can be computed by an ad\`elic complex~\cite{BeilinsonAdeles,Huber}, which is itself the target of a \v{C}ech-type spectral sequence known internally to chromatic homotopy theory as the \textit{chromatic spectral sequence}\index{chromatic spectral sequence}~\cite[Section 3]{MRW}, \cite[Equation 4.60]{Wilson}: \[E^2_{*,*,d} = H^*(\moduli{fg}; v_d^{-1} BP_* / (p^\infty, v_1^\infty, \ldots, v_{d-1}^\infty)\widetilde{\quad}) \Rightarrow H^*(\moduli{fg} \times \Spec \Z_{(p)}).\]  The \(1\)--line of this spectral sequence is entirely governed by \Cref{piLK1SExample}, and by finishing the even--primary form of that calculation, one discovers that the \(2\)--divisibilities of the elements \(\alpha_{j > 4}\) are too low to produce \emph{any} classes on the classical Adams \(1\)--line (cf.\ \Cref{ANSS2Figure}).  It follows that the elements \(h_{j > 3}\) cannot be permanent cycles, lest they contribute to a contradiction.
 \end{remark}
 
 \begin{remark}
