--- a/powerops.tex
+++ b/powerops.tex
@@ -521,7 +521,7 @@ In the next Lecture, we will show that Tate \(K\)--theory (cf.\ \Cref{TateKTheor
 
 \section{The spectrum of modular forms}\label{ConstructionOfTMFSection}
 
-The introduction of the geometry of \(E_\infty\)--ring spectra has borne out a second version of the \(\sigma\)--orientation, summarized as a map of \(E_\infty\)--ring spectra \[\sigma\co M\String \to \tmf.\]  This map has \emph{extremely} good properties, not only owing to it being a map of structured ring spectra but to the object \(\tmf\) itself, not heretofore discussed.  This is one variant of the spectrum of \index{modular form!topological, \(\tmf\)}\textit{topological modular forms}, which comes about from the following daydream: according to \Cref{EllipticSpectraAreOriented} and \Cref{EllipticSpectraAreOrientedByString}, every elliptic spectrum is naturally oriented, and the system of orientations should give rise to a \(\String\)--orientation of the homotopy limit over all elliptic spectra, itself a kind of ``universal'' elliptic spectrum.  There are several delicate points to this: the limit of a diagram of rings need not be a complex-orientable ring spectrum (cf.\ the \(C_2\)--equivariant spectrum \(KU\)); this diagram is very large; and the diagram exists only in the homotopy category and contains loops, so ``homotopy limit'' is not automatically defined without finding a lift to a more structured context.
+The introduction of the geometry of \(E_\infty\)--ring spectra has borne out a second version of the \(\sigma\)--orientation, summarized as a map of \(E_\infty\)--ring spectra \[\sigma\co M\String \to \tmf.\]  This map has \emph{extremely} good properties, not only owing to it being a map of structured ring spectra but to the object \(\tmf\) itself, not heretofore discussed.  This is one variant of the spectrum of \index{modular form!topological, \(\tmf\)}\textit{topological modular forms}, which comes about from the following daydream: according to \Cref{EllipticSpectraAreOriented} and \Cref{EllipticSpectraAreOrientedByString}, every elliptic spectrum is naturally oriented, and the system of orientations should give rise to a \(\String\)--orientation of the homotopy limit over all elliptic spectra, itself a kind of ``universal'' elliptic spectrum.  There are several delicate points to this: the limit of a diagram of rings need not be a complex-orientable ring spectrum (cf.\ the \(C_2\)--equivariant spectrum \(KU\)); this diagram is very large; and the diagram exists only in the homotopy category\footnote{Many of our elliptic spectra we produced by coupling \Cref{LEFTRealTheoremWithProof} to Brown representability, which has poor functoriality properties.} and contains loops, so ``homotopy limit'' is not automatically defined without finding a lift to a more structured context.
 
 The goal of this Lecture is to sketch out both the ingredients and the recipe for constructing this object.  We will not prove the main theorem in full detail, as the details are so thick that they do not admit a more reasonable presentation than what Behrens has already given~\cite{BehrensConstruction}.  The idea is to make use of the obstruction theory that \(E_\infty\)--rings garner us, and to ``work locally'' on a particular class of examples where the obstruction theory is well-behaved, using these to carefully exhaust the problem.  We begin with a precise definition of what ``locally'' means in this setting:
 
