clarify connection between 3.5.11 and underlying example

--- a/finite.tex
+++ b/finite.tex
@@ -1039,7 +1039,7 @@ n = \begin{cases} p-1 & \text{when \(p \ge 3\)}, \\ 4 & \text{when \(p = 2\)}. \
 \noindent In particular, the map \(v\) cannot be nilpotent, since a null-homotopic map induces the zero map in any homology theory.  Just as we took the non-nilpotent endomorphism \(p \in \pi_0 \End \S\) and coned it off, we can take the endomorphism \(v \in \pi_{2p-2} \End M_0(p)\) and cone it off to form a new spectrum called \(V(1)\).\footnote{The spectrum \(V(1)\) is actually defined to be a finite spectrum with \(BP_* V(1) \cong BP_* / (p, v_1)\). At \(p = 2\) this spectrum doesn't exist and this is a misnomer.  More generally, at odd primes \(p\) Nave shows that \(V((p+1)/2)\) doesn't exist~\cite[Theorem 1.3]{Nave}.}  One can ask, then, whether the pattern continues: does \(V(1)\) have a non-nilpotent self-map, and can we cone it off to form a new such spectrum with a new such map?  Can we then do that again, indefinitely?  In order to study this question, we are motivated to find spectra satisfying the following condition:
 
 \begin{definition}[{\cite[Definition 4]{HopkinsSmith}, cf.\ \cite[Theorem 1]{DHS}}]
-A ring spectrum \(E\) \index{detects nilpotence}\textit{detects nilpotence} if for any ring spectrum \(R\) the kernel of the Hurewicz homomorphism \[R_*\eta_E\co \pi_* R \to E_* R\] consists of nilpotent elements.  (In particular, such an \(E\) cannot send such a nontrivial self-map to zero.)
+A ring spectrum \(E\) \index{detects nilpotence}\textit{detects nilpotence} if for any ring spectrum \(R\) the kernel of the Hurewicz homomorphism \[R_*\eta_E\co \pi_* R \to E_* R\] consists of nilpotent elements.  (Setting \(R = \End(F)\), a non-nilpotent self-map of \(F\) gives an element of \(\pi_* R\) which must then have nontrivial image in \(E_* R\).)
 \end{definition}
 
 This question and surrounding issues formed the basis of Ravenel's nilpotence conjectures~\cite[Section 10]{RavenelLocalizationWRTPeriodic}, which were resolved by Devinatz, Hopkins, and Smith~\cite{DHS,HopkinsSmith}.  One of their two main technical achievements was to demonstrate that we already have access to a nice homology theory which detects nilpotence:
