--- a/cooperations.tex
+++ b/cooperations.tex
@@ -783,8 +783,8 @@ The contravariant Dieudonn\'e functor described above has a natural extension by
 \begin{remark}[{cf. \cite[Section 2.3]{MoravaCobordismComodules}}]\label{ThePeriodMapSection}
 Dieudonn\'e theory gives rise to an important function called the \idxentry{period map}, which we will not have direct use for in this book but which we would be negligent to omit.  Although the crystalline nature of the cohomology group \(H^1_{dR}\) makes our definition of \(D^*\) invariant of choice of lift, the underlying chain complex is \emph{not} invariant of choice of lift.  In particular, the subsheaf of honestly invariant differentials \(\omega_{\G}\) selects an interesting \(1\)--dimensional vector subspace of \(PH^1_{dR}(\G)\)~\cite[Section 2.3]{MoravaCobordismComodules}.  Thinking of \(\G\) as a point in \((\moduli{fg})^\wedge_{\G_0}(\W_p(k))\), this observation gives rise to an interesting function
 \begin{align*}
-\pi_{GH}\co (\moduli{fg})^\wedge_{\G_0}(\W_p(k)) & \to \P(D^*(\G)), \\
-\G & \mapsto [\omega_{\G} \subseteq D^*(\G)].
+\pi_{GH}\co (\moduli{fg})^\wedge_{\G_0}(\W_p(k)) & \to \P(D^*(\G_0)), \\
+\G & \mapsto [\omega_{\G} \subseteq D^*(\G_0)].
 \end{align*}
 This map has incredibly good properties.  It is equivariant for the action of \(\Aut \G_0\)~\cite[Theorem 1]{HopkinsGrossAnnouncement}, and with enough work one can use this to extract explicit (recursive) formulas expressing the action~\cite{DevinatzHopkins}, \cite[Section 24]{StricklandFPFP}, \cite[Section 22]{HopkinsGrossEquivVBs}, bringing some relief to the problem of \Cref{StablizerRepIsComplicated}.  Also, in a suitable context it becomes an \'etale morphism with identifiable fibers~\cite[Theorem 1]{HopkinsGrossAnnouncement}, \cite[Sections 23-4]{HopkinsGrossEquivVBs}, which allows one to give an explicit formula for the dualizing sheaf~\cite[Corollary 3]{HopkinsGrossAnnouncement} with direct applications to topology~\cite[Theorem 6]{HopkinsGrossAnnouncement}: \[\context{E_\Gamma}(\Susp^{-d^2 - d} \mathbb I_{\Q/\Z}) = \Omega^{d - 1}_{(\moduli{fg})^\wedge_\Gamma} = \omega^{\otimes d}[\det],\] where the \index{Brown--Comenetz dual}\textit{Brown--Comenetz dualizing object} \(\mathbb I_{\Q/\Z}\) is defined by the property \[\mathbb I_{\Q/\Z}^0(E) = \CatOf{AbelianGroups}(\pi_0 E, \Q/\Z).\]
 
