--- a/finite.tex
+++ b/finite.tex
@@ -991,7 +991,7 @@ This determines a spectrum \(K_\Gamma = E_\Gamma / I_d\), and hence determines a
 \end{definition}
 
 \begin{remark}
-The trailing ``\(P\)'' in these names is to disambiguate them from similar less-periodic objects in the literature.  Namely, \(BP\) is often taken to be a minimal wedge summand of \(MU_{(p)}\), whereas \(E(d)\), \(E_\Gamma\), and \(K(d)\) can all be taken to be \(2(p^d-1)\)--periodic (for heights \(0 < d < \infty\)).  The one exception to this minimality convention is \(E_\Gamma\), which is \emph{usually} taken to be \(2\)--periodic already, so we do not attach a ``\(P\)'' to its name.
+The trailing ``\(P\)'' in some of these names is to disambiguate them from similar less-periodic objects in the literature.  Other authors often prefer to take \(BP\) to be a minimal wedge summand of \(MU_{(p)}\) and to take the spectra \(E(d)\) and \(K(d)\) to be \(2(p^d-1)\)--periodic (for heights \(0 < d < \infty\)).  On the other hand, the spectra \(E_\Gamma\) and \(K_\Gamma\) are \emph{usually} taken to be \(2\)--periodic already.  Since we are nearly exclusively interested in \(2\)--periodic spectra, we append a ``\(P\)'' to the names of the former spectra, but not to \(E_\Gamma\) or \(K_\Gamma\).
 \end{remark}
 
 \begin{example}[{cf.\ \Cref{CPinftyKUExample}}]\label{ExampleOfMoravasTheoriesAtGm}
