--- a/finite.tex
+++ b/finite.tex
@@ -950,7 +950,7 @@ Flatness of \(\sheaf F\) is equivalent to \(\Tor_1(\sheaf F, \sheaf N) = 0\) for
 The second condition is satisfied one of two ways, corresponding to our two auxiliary hypotheses and two conclusions in the Theorem statement:
 \begin{itemize}
 \item If \(\sheaf F\) itself satisfies \(\sheaf F / I_{D+1} = 0\), we are done.
-\item Writing \(j_{D+1}\co \moduli{fg}^{\ge D+1} \to \moduli{fg}\) for the inclusion of the prime closed substack, we can identify \(\sheaf N / I_{D+1}\) with \(j_{D+1}{}_* j_{D+1}^* \sheaf N\).  If \(\sheaf N\) is coherent (for instance, in the case that \(\sheaf N = \context{MU}(X)\) for a \emph{finite} complex \(X\)), then \(j_{D+1}^* \sheaf N\) is free for large \(D\) and hence has vanishing \(\Tor\) groups.
+\item Writing \(j_{D+1}\co \moduli{fg}^{\ge D+1} \to \moduli{fg}\) for the inclusion of the prime closed substack, we identify \(\sheaf F / I_{D+1}\) with \(j_{D+1}{}_* j_{D+1}^* \sheaf F\) and use this to restrict both sides: \[\Tor_{D+1}(\sheaf F/I_{D+1}, \sheaf N) = \Tor_{D+1}(j_{D+1}{}_* j_{D+1}^* \sheaf F, \sheaf N) = \Tor_{D+1}(j_{D+1}^* \sheaf F, j_{D+1}^* \sheaf N).\]  If \(\sheaf N = \context{MU}(X)\) is a \emph{finite} complex \(X\), then \(\sheaf N\) is coherent and hence \(j_{D+1}^* \sheaf N\) is free for large \(D\).  Its \(\Tor\) groups thus vanish.
 \end{itemize}
 
 We then turn to the first collection of conditions.  They are \emph{always} satisfied, but this requires an argument.  We write \(i_d\co \moduli{fg}^{= d} \to \moduli{fg}\) for the inclusion of the substack of formal groups of height exactly \(d\), which (following \Cref{OpenSubstacksOfMfg}) has a presentation by the Hopf algebroid \[(v_d^{-1} A / I_d, \Gamma \otimes v_d^{-1} A / I_d).\]  We are trying to study the derived functors of \[\sheaf N \mapsto (i_d{}_* i_d^* \sheaf F) \otimes \sheaf N \cong i_d{}_* (i_d^* \sheaf F \otimes i_d^* \sheaf N).\]  Since \(i_d{}_*\) is exact, we are moved to study the composite functor spectral sequence \[\CatOf{QCoh}_{\moduli{fg}} \xrightarrow{i_d^*} \CatOf{QCoh}_{\moduli{fg}^{=d}} \xrightarrow{i_d^* \sheaf F \otimes -} \CatOf{QCoh}_{\moduli{fg}^{=d}}.\]  The second functor is actually exact: the geometric map \[\Gamma_d\co \Spec k \to \moduli{fg}^{=d}\] is a faithfully flat cover, and \(k\)--modules have no nontrivial \(\Tor\).  Meanwhile, the first functor has at most \(d\) derived functors: \(i_d^*\) is modeled by tensoring with \(v_d^{-1} A / I_d\), but \(A / I_d\) admits a Koszul resolution with \(d\) stages and the localization \(A / I_d \to v_d^{-1} A / I_d\) is flat.  As \(\Tor_{d+1}\) is beyond the length of this resolution, it is always zero.
