replace "oplus", usually the internal direct sum, by "times", the external version

--- a/quillen.tex
+++ b/quillen.tex
@@ -642,11 +642,11 @@ Cohomology classes \(f \in E^{-q}(X)\) lying in degrees \(q \ne 0\) require more
 where \(\S^\rho\) is the \index{equivariant spectrum!representation sphere}representation sphere for the permutation representation of \(\Sigma_n\).  Such a system of factorizations is called an \(H_\infty^1\)--ring structure on \(E\)---but in practice these are very uncommon,\footnote{In fact, they can only appear on \(H\F_2\)--algebras~\cite[Section VII.6.1]{BMMS}.} and instead a subsystem of factorizations for every \(q \equiv 0 \pmod d\) is called an \(H_\infty^d\)--ring structure~\cite[Definition I.4.3]{BMMS}.  In the same way, these give rise to external and internal power operations on cohomology classes of those negative degrees which are divisible by \(d\).  We will mostly concern ourselves with the theory of \(H_\infty\)--ring spectra in this section, but we will eventually work with \(H_\infty^2\)--ring spectra in the intended application, and so we now describe a naturally occuring such structure on \(MU\)\index{H infty ring spectrum@\(H_\infty\)--ring spectrum!H infinity 2 on MU@\(H_\infty^2\)--structure on \(MU\)}.
 
 \begin{definition}[{\cite[Definition VII.7.4]{Rudyak}}]\label{DefnAssociatedBundle}
-Suppose that \(\xi\co X \to BU(k)\) presents a complex vector bundle of rank \(k\) on \(X\).  The \(n\)--fold direct sum of this bundle gives a new bundle \[X^{\times n} \xrightarrow{\xi^{\oplus n}} BU(k)^{\times n} \xrightarrow{\oplus} BU(n \cdot k)\] of rank \(nk\) on which the symmetric group \(\Sigma_n\) acts.  By taking the (homotopy) \(\Sigma_n\)--quotient of the fiber, total, and base spaces, we produce a vector bundle \(\xi(\Sigma_n)\) on \(X^{\times n}_{h\Sigma_n}\) participating in the diagram
+Suppose that \(\xi\co X \to BU(k)\) presents a complex vector bundle of rank \(k\) on \(X\).  The \(n\)--fold product of this bundle gives a new bundle \[X^{\times n} \xrightarrow{\xi^{\times n}} BU(k)^{\times n} \xrightarrow{\oplus} BU(n \cdot k)\] of rank \(nk\) on which the symmetric group \(\Sigma_n\) acts.  By taking the (homotopy) \(\Sigma_n\)--quotient of the fiber, total, and base spaces, we produce a vector bundle \(\xi(\Sigma_n)\) on \(X^{\times n}_{h\Sigma_n}\) participating in the diagram
 \begin{center}
 \begin{tikzcd}
-X^{\times n} \arrow["\xi^{\oplus n}"]{r} \arrow{d} & BU(k)^{\times n} \arrow["\oplus"]{r} & BU(nk) \arrow[leftarrow, "\xi(\Sigma_n)"' near end]{lld} \\
-X^{\times n}_{h\Sigma_n} \arrow["\xi^{\oplus n}_{h\Sigma_n}"']{r} & BU(k)^{\times n}_{h\Sigma_n}. \arrow[densely dotted]{ru}[description]{\widetilde \mu_n} \arrow[crossing over, leftarrow]{u}
+X^{\times n} \arrow["\xi^{\times n}"]{r} \arrow{d} & BU(k)^{\times n} \arrow["\oplus"]{r} & BU(nk) \arrow[leftarrow, "\xi(\Sigma_n)"' near end]{lld} \\
+X^{\times n}_{h\Sigma_n} \arrow["\xi^{\times n}_{h\Sigma_n}"']{r} & BU(k)^{\times n}_{h\Sigma_n}. \arrow[densely dotted]{ru}[description]{\widetilde \mu_n} \arrow[crossing over, leftarrow]{u}
 \end{tikzcd}
 \end{center}
 The universal case gives the map \(\widetilde \mu_n\).
@@ -658,8 +658,8 @@ There is an isomorphism \[T(\xi(\Sigma_n)) \simeq (T\xi)^{\sm n}_{h\Sigma_n}.\]
 \begin{proof}
 This proof is mostly a matter of having had the idea to write down the Lemma to begin with.  From here, we string basic properties together:
 \begin{align*}
-T(\xi(\Sigma_n)) & = T(\xi^{\oplus n}_{h\Sigma_n}) \tag{definition} \\
-& = T(\xi^{\oplus n})_{h\Sigma_n} \tag{colimits commute with colimits} \\
+T(\xi(\Sigma_n)) & = T(\xi^{\times n}_{h\Sigma_n}) \tag{definition} \\
+& = T(\xi^{\times n})_{h\Sigma_n} \tag{colimits commute with colimits} \\
 & = T(\xi)^{\sm n}_{h\Sigma_n}. \tag{\(T\) is monoidal: \Cref{ThomSpacesAreMonoidal}}
 \end{align*}
 \end{proof}
@@ -877,13 +877,13 @@ Having now set up an encompassing theory of stable operations, we now seek to gi
 \begin{center}
 \begin{tikzcd}
 \Susp^\infty_+ BU(1) \arrow["\Delta"]{d} \arrow{r} & \Susp^\infty_+ BU(1) \sm \Susp^\infty_+ BC_n \arrow["\Delta_{hC_n}"]{d} \\
-(\Susp^\infty_+ BU(1))^{\sm n} \arrow{r} \arrow[bend right=15, "\L^{\oplus n}"' near start]{rr} \arrow["c_1^{\sm n}"]{d} & \Susp^\infty_+ BU(1)^{\sm n}_{hC_n} \arrow["\L(n)"]{r} \arrow[crossing over]{d} \arrow["P^{C_n}_{\mathrm{ext}}" near end, crossing over]{rd} & \Susp^\infty_+ BU(n) \arrow["c_n"]{d} \\
+(\Susp^\infty_+ BU(1))^{\sm n} \arrow{r} \arrow[bend right=15, "\L^{\times n}"' near start]{rr} \arrow["c_1^{\sm n}"]{d} & \Susp^\infty_+ BU(1)^{\sm n}_{hC_n} \arrow["\L(n)"]{r} \arrow[crossing over]{d} \arrow["P^{C_n}_{\mathrm{ext}}" near end, crossing over]{rd} & \Susp^\infty_+ BU(n) \arrow["c_n"]{d} \\
 (\Susp^2 MU)^{\sm n} \arrow{r} & (\Susp^2 MU)^{\sm n}_{hC_n} \arrow{r} & \Susp^{2n} MU.
 \end{tikzcd}
 \end{center}
 The commutativity of the widest rectangle (i.e., the justification for the name ``\(c_n\)'' on the right-most vertical arrow) comes from the Cartan formula for Chern classes: because \(\L^{\oplus n}\) splits as the sum of \(n\) line bundles, \(c_n(\L^{\oplus n})\) is computed as the product of the \(1\)\textsuperscript{st} Chern classes of those line bundles.  Second, the commutativity of the right-most square is not trivial: it is a specific consequence of how the multiplicative structure on \(MU\) arises from the direct sum of vector bundles.\footnote{In general, any notion of first Chern class \(\Susp^\infty_+ BU(1) \to \Susp^2 E\) gives rise to a \emph{noncommuting} diagram of this same shape.  The two composites \(\Susp^\infty_+ BU(1)^{\sm n}_{hC_n} \to \Susp^{2n} E\) need not agree, since \(\L(n)\) has no \textit{a priori} reason to be compatible with the factorization appearing in the \(H_\infty^2\)--structure.  They turn out to be loosely related nonetheless, and their exact relation (as well as a procedure for making them agree in certain cases) is the subject of \Cref{PowerOpnsSection}.}  The commutativities of the other two squares comes from the natural transformation from a \(C_n\)--space to its homotopy orbit space.
 
-Hence, the internal cyclic power operation \(P^{C_n}(x)\) applied to the canonical coordinate \(x\) is defined by the composite \[\Susp^\infty_+ BU(1)_{hC_n} \xrightarrow{\Delta_{hC_n}} (\Susp^\infty_+ BU(1))^{\sm n}_{hC_n} \to \Susp^{2n} MU^{\sm n}_{hC_n} \to \Susp^{2n} MU,\] which is to say \[P^{C_n}(x) = c_n(\Delta_{hC_n}^* \L(n)).\]  We have thus reduced to computing a particular Conner--Floyd--Chern class of a particular bundle.  Our next move is to realize that we have not lost information by passing from the bundle \(\Delta^* \L^{\oplus n}\) to the bundle \(\Delta_{hC_n}^* \L(n)\).
+Hence, the internal cyclic power operation \(P^{C_n}(x)\) applied to the canonical coordinate \(x\) is defined by the composite \[\Susp^\infty_+ BU(1)_{hC_n} \xrightarrow{\Delta_{hC_n}} (\Susp^\infty_+ BU(1))^{\sm n}_{hC_n} \to \Susp^{2n} MU^{\sm n}_{hC_n} \to \Susp^{2n} MU,\] which is to say \[P^{C_n}(x) = c_n(\Delta_{hC_n}^* \L(n)).\]  We have thus reduced to computing a particular Conner--Floyd--Chern class of a particular bundle.  Our next move is to realize that we have not lost information by passing from the bundle \(\Delta^* \L^{\times n}\) to the bundle \(\Delta_{hC_n}^* \L(n)\).
 
 \begin{theorem}\label{GEquivBundlesVsBundlesOverBG}
 There is a natural bijection between \index{equivariant vector bundle}\(G\)--equivariant vector bundles over a base \(X\) on which \(G\) acts trivially and vector bundles on \(X \times BG\).
@@ -900,10 +900,10 @@ The right-hand side consists of \(G\)--equivariant vector bundles over the \(G\)
 \end{proof}
 
 \begin{corollary}
-Under this bijection, the vector bundle \(\Delta_{hC_n}^* \L(n)\) on \(BU(1) \times BC_n\) corresponds to the \(C_n\)--equivariant vector bundle \(\Delta^* \L^{\oplus n}\) on \(BU(1)\). \qed
+Under this bijection, the vector bundle \(\Delta_{hC_n}^* \L(n)\) on \(BU(1) \times BC_n\) corresponds to the \(C_n\)--equivariant vector bundle \(\Delta^* \L^{\times n}\) on \(BU(1)\). \qed
 \end{corollary}
 
-We thus proceed to analyze \(\Delta^*_{hC_n} \L(n)\) by studying the \(C_n\)--equivariant bundle \(\Delta^* \L^{\oplus n}\) instead.  The \(C_n\)--action is given by permutation of the factors, and hence we have an identification \[\Delta^* \L^{\oplus n} \cong \L \otimes \pi^* \rho,\] where \(\rho\) is the permutation representation of \(C_n\) (considered as a vector bundle over a point) and \(\pi\co BU(1) \to *\) is the constant map.  The permutation representation for the abelian group \(C_n\), also known as its regular representation, is accessible by character theory.  The generating character \(\chi\co U(1)[n] \to U(1)\) gives a decomposition \[\rho \cong \bigoplus_{j=0}^{n-1} \chi^{\otimes j}.\]  Applying this to our situation, we get a sequence of isomorphisms of \(C_n\)--equivariant vector bundles \[\Delta^* \L^{\oplus n} \cong \L \otimes \pi^* \rho \cong \L \otimes \bigoplus_{j=0}^{n-1} \pi^* \chi^{\otimes j} \cong \bigoplus_{j=0}^{n-1} \L \otimes \pi^* \chi^{\otimes j}.\]  Applying \Cref{GEquivBundlesVsBundlesOverBG}, we recast this as a calculation of the bundle \(\Delta_{hC_n}^* \L(n)\): \[\Delta_{hC_n}^* \L(n) = \bigoplus_{j=0}^{n-1} \pi_1^* \L \otimes \pi_2^* \eta^{\otimes j},\] where \(\eta\) is the bundle classified by \(\eta\co BU(1)[n] \to BU(1)\) and \(\pi_1\), \(\pi_2\) are the two projections off of \(BU(1) \times BC_n\).
+We thus proceed to analyze \(\Delta^*_{hC_n} \L(n)\) by studying the \(C_n\)--equivariant bundle \(\Delta^* \L^{\times n}\) instead.  The \(C_n\)--action is given by permutation of the factors, and hence we have an identification \[\Delta^* \L^{\times n} \cong \L \otimes \pi^* \rho,\] where \(\rho\) is the permutation representation of \(C_n\) (considered as a vector bundle over a point) and \(\pi\co BU(1) \to *\) is the constant map.  The permutation representation for the abelian group \(C_n\), also known as its regular representation, is accessible by character theory.  The generating character \(\chi\co U(1)[n] \to U(1)\) gives a decomposition \[\rho \cong \bigoplus_{j=0}^{n-1} \chi^{\otimes j}.\]  Applying this to our situation, we get a sequence of isomorphisms of \(C_n\)--equivariant vector bundles \[\Delta^* \L^{\times n} \cong \L \otimes \pi^* \rho \cong \L \otimes \bigoplus_{j=0}^{n-1} \pi^* \chi^{\otimes j} \cong \bigoplus_{j=0}^{n-1} \L \otimes \pi^* \chi^{\otimes j}.\]  Applying \Cref{GEquivBundlesVsBundlesOverBG}, we recast this as a calculation of the bundle \(\Delta_{hC_n}^* \L(n)\): \[\Delta_{hC_n}^* \L(n) = \bigoplus_{j=0}^{n-1} \pi_1^* \L \otimes \pi_2^* \eta^{\otimes j},\] where \(\eta\) is the bundle classified by \(\eta\co BU(1)[n] \to BU(1)\) and \(\pi_1\), \(\pi_2\) are the two projections off of \(BU(1) \times BC_n\).
 
 We can use this to access \(c_n(\Delta_{hC_n}^* \L(n))\).  As the top Chern class of this \(n\)--dimensional vector bundle, we think of this as a calculation of its Euler class, which lets us lean on multiplicativity:
 \begin{align*}
