--- a/finite.tex
+++ b/finite.tex
@@ -922,38 +922,41 @@ Having accomplished all our major goals, we close our algebraic analysis of \(\m
 \section{Nilpotence and periodicity in finite spectra}\label{NilpotenceAndPeriodicity}
 
 With our analysis of \(\moduli{fg}\) complete, our first goal in this Lecture is to finish the program sketched in the introduction to this Case Study by manufacturing those interesting homology theories connected to the functor \(\context{MU}(-)\).  We begin by rephrasing our main tool, \Cref{LandwebersStackyTheorem}, in terms of algebraic conditions.
-\begin{theorem}[{Landweber Exact Functor Theorem, \cite[Corollary 2.7]{LandweberHomologicalComodules} and \cite[Theorem 21.4 and Proposition 21.5]{HopkinsCOCTALOS}}]
+\begin{theorem}[{Landweber Exact Functor Theorem, \cite[Corollary 2.7]{LandweberHomologicalComodules}, \cite[Lecture 16]{LurieChromaticCourseNotes}, and \cite[Theorem 21.4 and Proposition 21.5]{HopkinsCOCTALOS}}]
 Let \(\sheaf F\) be a \index{sheaf!quasicoherent}quasicoherent sheaf over \(\moduli{fg} \times \Spec \Z_{(p)}\), thought of as a \index{comodule}comodule \(M\) for the Kudo--Araki Hopf algebroid (cf.\ \Cref{KudoArakiIsomorphism}) \[(A, \Gamma) = (\sheaf O_{\moduli{fgl}^{\ptyp}}, \sheaf O_{\moduli{fgl}^{\ptyp}}[t_1, t_2, \ldots]).\]  If \((p, v_1, \ldots, v_d, \ldots)\) forms an infinite regular sequence on \(M\), then \[X \mapsto M \otimes_{\sheaf O_{\moduli{fgl}^{\ptyp}}} MUP_0(X)\] determines a homology theory on \emph{finite} spectra \(X\).  Moreover, if \(M/I_d = 0\) for some \(d \gg 0\), then this determines a homology theory on \emph{all} spectra \(X\).
 \label{LEFTRealTheoremWithProof}
 \end{theorem}
 \begin{proof}
-Following the discussion in the introduction, we note that a cofiber sequence \[X' \to X \to X''\] of spectra gives rise to an exact sequence
+Following the discussion in the introduction, note that a cofiber sequence \[X' \to X \to X''\] of spectra gives rise to an exact sequence
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[row sep=1em]
 \cdots \arrow{r} & \context{MUP}(X') \arrow{r} & \context{MUP}(X) \arrow{r} & \context{MUP}(X'') \arrow{r} & \cdots \\
 \cdots \arrow{r} & \sheaf N' \arrow[equal]{u} \arrow{r} & \sheaf N \arrow[equal]{u} \arrow{r} & \sheaf N'' \arrow[equal]{u} \arrow{r} & \cdots.
 \end{tikzcd}
 \end{center}
 We thus see that we are essentially tasked with showing that \(\sheaf F\) is \index{sheaf!flat}flat, so that tensoring with \(\sheaf F\) does not disturb the exactness of this sequence.  In that case, we can then apply Brown representability to the composite functor \(\sheaf F \otimes \context{MUP}(X)\).
 
-Flatness of \(\sheaf F\) is equivalent to \(\Tor_1(\sheaf F, \sheaf N) = 0\) for an arbitrary auxiliary quasicoherent sheaf \(\sheaf N\) (soon to be thought of as \(\context{MUP}(X)\)).  By our regularity hypothesis, there is an exact sequence of sheaves \[0 \to \sheaf F \xrightarrow{p} \sheaf F \to \sheaf F / (p) \to 0,\] so applying \(\Tor_*(-, \sheaf N)\) gives an exact sequence \[\Tor_2(\sheaf F / (p), \sheaf N) \xrightarrow{} \Tor_1(\sheaf F, \sheaf N) \xrightarrow{p} \Tor_1(\sheaf F, \sheaf N)\] of \(\Tor\) groups.  The sequence gives the following sufficiency condition: 
+Flatness of \(\sheaf F\) is equivalent to \(\Tor_1(\sheaf F, \sheaf N) = 0\) for an arbitrary auxiliary quasicoherent sheaf \(\sheaf N\).  By our regularity hypothesis, there is an exact sequence of sheaves \[0 \to \sheaf F \xrightarrow{p} \sheaf F \to \sheaf F / (p) \to 0,\] so applying \(\Tor_*(-, \sheaf N)\) gives an exact sequence \[\Tor_2(\sheaf F / (p), \sheaf N) \xrightarrow{} \Tor_1(\sheaf F, \sheaf N) \xrightarrow{p} \Tor_1(\sheaf F, \sheaf N)\] of \(\Tor\) groups.  The sequence gives the following sufficiency condition: 
 \begin{align*}
 [\Tor_1(p^{-1} \sheaf F, \sheaf N) &= 0, & \Tor_2(\sheaf F/(p), \sheaf N) & = 0] & \Rightarrow \quad\quad\!\!\! \Tor_1(\sheaf F, \sheaf N) & = 0. \\
 \intertext{Similarly, the \(v_1\)--multiplication sequence gives another sufficiency condition:}
 [\Tor_2(v_1^{-1} \sheaf F/(p), \sheaf N) & = 0, & \Tor_3(\sheaf F/I_2, \sheaf N) & = 0] & \Rightarrow \Tor_2(\sheaf F/(p), \sheaf N) & = 0.
 \end{align*}
- Continuing in this fashion, for some \(D \gg 0\) we would like to show
+Continuing in this fashion, for some \(D \gg 0\) we would like to show
 \begin{align*}
 \Tor_{d+1}(v_d^{-1} \sheaf F/I_d, \sheaf N) & = 0, \tag{for each \(d < D\)} \\
 \Tor_{D+1}(\sheaf F/I_{D+1}, \sheaf N) & = 0.
 \end{align*}
-The second condition is satisfied one of two ways, corresponding to our two auxiliary hypotheses and two conclusions in the Theorem statement:
-\begin{itemize}
-\item If \(\sheaf F\) itself satisfies \(\sheaf F / I_{D+1} = 0\), we are done.
-\item Writing \(j_{D+1}\co \moduli{fg}^{\ge D+1} \to \moduli{fg}\) for the inclusion of the prime closed substack, we identify \(\sheaf F / I_{D+1}\) with \(j_{D+1}{}_* j_{D+1}^* \sheaf F\) and use this to restrict both sides: \[\Tor_{D+1}(\sheaf F/I_{D+1}, \sheaf N) = \Tor_{D+1}(j_{D+1}{}_* j_{D+1}^* \sheaf F, \sheaf N) = \Tor_{D+1}(j_{D+1}^* \sheaf F, j_{D+1}^* \sheaf N).\]  If \(\sheaf N = \context{MU}(X)\) is a \emph{finite} complex \(X\), then \(\sheaf N\) is coherent and hence \(j_{D+1}^* \sheaf N\) is free for large \(D\).  Its \(\Tor\) groups thus vanish.
-\end{itemize}
 
-We then turn to the first collection of conditions.  They are \emph{always} satisfied, but this requires an argument.  We write \(i_d\co \moduli{fg}^{= d} \to \moduli{fg}\) for the inclusion of the substack of formal groups of height exactly \(d\), which (following \Cref{OpenSubstacksOfMfg}) has a presentation by the Hopf algebroid \[(v_d^{-1} A / I_d, \Gamma \otimes v_d^{-1} A / I_d).\]  We are trying to study the derived functors of \[\sheaf N \mapsto (i_d{}_* i_d^* \sheaf F) \otimes \sheaf N \cong i_d{}_* (i_d^* \sheaf F \otimes i_d^* \sheaf N).\]  Since \(i_d{}_*\) is exact, we are moved to study the composite functor spectral sequence \[\CatOf{QCoh}_{\moduli{fg}} \xrightarrow{i_d^*} \CatOf{QCoh}_{\moduli{fg}^{=d}} \xrightarrow{i_d^* \sheaf F \otimes -} \CatOf{QCoh}_{\moduli{fg}^{=d}}.\]  The second functor is actually exact: the geometric map \[\Gamma_d\co \Spec k \to \moduli{fg}^{=d}\] is a faithfully flat cover, and \(k\)--modules have no nontrivial \(\Tor\).  Meanwhile, the first functor has at most \(d\) derived functors: \(i_d^*\) is modeled by tensoring with \(v_d^{-1} A / I_d\), but \(A / I_d\) admits a Koszul resolution with \(d\) stages and the localization \(A / I_d \to v_d^{-1} A / I_d\) is flat.  As \(\Tor_{d+1}\) is beyond the length of this resolution, it is always zero.
+We begin with the first collection of conditions.  They are \emph{always} satisfied, but this requires an argument.  We write \(i_d\co \moduli{fg}^{= d} \to \moduli{fg}\) for the inclusion of the substack of formal groups of height exactly \(d\), which (following \Cref{OpenSubstacksOfMfg}) has a presentation by the Hopf algebroid \[(v_d^{-1} A / I_d, \Gamma \otimes v_d^{-1} A / I_d).\]  We are trying to study the derived functors of \[\sheaf N \mapsto (i_d{}_* i_d^* \sheaf F) \otimes \sheaf N \cong i_d{}_* (i_d^* \sheaf F \otimes i_d^* \sheaf N).\]  Since \(i_d{}_*\) is exact, we are moved to study the composite functor spectral sequence \[\CatOf{QCoh}_{\moduli{fg}} \xrightarrow{i_d^*} \CatOf{QCoh}_{\moduli{fg}^{=d}} \xrightarrow{i_d^* \sheaf F \otimes -} \CatOf{QCoh}_{\moduli{fg}^{=d}}.\]  The second functor is exact, independent of \(\sheaf F\): the geometric map \[\Gamma_d\co \Spec k \to \moduli{fg}^{=d}\] is a faithfully flat cover, and \(k\)--modules have no nontrivial \(\Tor\).  Meanwhile, the first functor has at most \(d\) derived functors: \(i_d^*\) is modeled by tensoring with \(v_d^{-1} A / I_d\), but \(A / I_d\) admits a Koszul resolution with \(d\) stages and the localization \(A / I_d \to v_d^{-1} A / I_d\) is flat.  As \(\Tor_{d+1}\) is beyond the length of this resolution, it is always zero.
+
+The second condition is dispatched in two cases, corresponding to the two auxiliary hypotheses and two conclusions in the Theorem statement.  In the first case, if \(\sheaf F\) itself satisfies \(\sheaf F / I_{D+1} = 0\), we are done.  In the second case, by assuming \(X\) to be a finite spectrum, we learn that \(\sheaf N\) is \emph{coherent}.  Writing \(j_{D+1}\co \moduli{fg}^{\ge D+1} \to \moduli{fg}\) for the inclusion of the prime closed substack, it follows from coherence and \Cref{LandwebersClassificationOfClosedSubstacks} that \(j_{D+1}^* \sheaf N\) is free for large \(D\), and hence \[\Tor_*^{\moduli{fg}^{\ge D+1}}( j_{D+1}^* \sheaf F, j_{D+1}^* \sheaf N) = 0.\]  We proceed by downward induction: for each \(d \le D\), Mayer--Vietoris shows
+\[
+\left[\Tor^{\moduli{fg}^{\ge d+1}}_*(\sheaf F / I_{D+1}, j_{d+1} \sheaf N) = 0, \quad \quad \Tor^{\moduli{fg}^{= d}}_*(\sheaf F / I_{D+1}, v_d^{-1} j_d^* \sheaf N) = 0\right]
+\]\vspace{-\baselineskip}\[
+\Rightarrow \quad\quad\!\!\! \Tor^{\moduli{fg}^{\ge d}}_*(\sheaf F / I_{D+1}, j_d^* \sheaf N) = 0.
+\]
+The first statement is the inductive hypothesis, and the second statement follows again because \(\Gamma_d\) is a faithfully flat cover and \(k\)--modules have trivial torsion.
 \end{proof}
 
 \begin{remark}
@@ -1341,7 +1344,7 @@ from which we deduce
 \end{example}
 
 \begin{example}[{\cite[Example 7.18]{Rezk512Notes}}]
-We can also give an explicit chromatic analysis of the homotopy element \(\eta \in \pi_1 \S\) studied in \Cref{HopfAlgebraLecture}.  As before, consider the complex \(\CP^2 = \Susp^2 C(\eta)\).  We now consider the possibility that \(\CP^2\) splits as \(\S^2 \vee \S^4\), in which case there would be a dotted retraction in the cofiber sequence
+We can also make an explicit chromatic analysis of the homotopy element \(\eta \in \pi_1 \S\) studied in \Cref{HopfAlgebraLecture}.  As before, consider the complex \(\CP^2 = \Susp^2 C(\eta)\), and suppose that \(\CP^2\) splits as \(\S^2 \vee \S^4\).  In this case there would be a dotted retraction in the cofiber sequence
 \begin{center}
 \begin{tikzcd}
 \S^2 \arrow{r} & \CP^2 \arrow{r} \arrow[densely dotted, bend right, "i"']{l} & \S^4.
@@ -1366,8 +1369,8 @@ so that we would arrive at a contradiction if the equation \(2a = 1\) were insol
 \begin{example}[{\cite[Example 7.17 and Corollary 5.12]{Rezk512Notes}}]
 Take \(k\) to be a perfect field of positive characteristic \(p\), and take \(\Gamma\) over \(\Spec k\) to be a finite height formal group with associated Morava \(E\)--theory \(E_\Gamma\).  By smashing the unit map \(\S \to E_\Gamma\) with the mod--\(p\) Moore spectrum, we get an induced map of homotopy groups \[h_{2n}\co \pi_{2n} M_0(p) \to \pi_{2n} E_\Gamma/p.\]  We concluded as a consequence of \Cref{IdIsAnInvariantIdeal} that there is an invariant section \(v_1\) of \(\omega^{\otimes(p-1)}\) on \(\moduli{fg}^{\ge 1} \to \A^1\), and hence a preferred element of \(\pi_{2(p-1)} E_\Gamma\) which is natural in the choice of \(\Gamma\).  One might hope that these elements are the image of an element in \(\pi_{2(p-1)} M_0(p)\) under the Hurewicz map \(h\), and this turns out to be true: this element is called \(\alpha_{1/1}\).  This element furthermore turns out to be \(p\)--torsion, meaning it extends to a map
 \begin{center}
-\begin{tikzcd}
-\S^{2(p-1)} \arrow["p"]{r} \arrow["0"]{rd} & \S^{2(p-1)} \arrow["\alpha_{1/1}"]{d} \arrow["\cofib"]{r} & M_{2(p-1)}(p) \arrow[densely dotted, "v"]{ld} \\
+\begin{tikzcd}[row sep=1.2em]
+\S^{2(p-1)} \arrow["p"]{r} \arrow["0"']{rd} & \S^{2(p-1)} \arrow["\alpha_{1/1}"]{d} \arrow["\cofib"]{r} & M_{2(p-1)}(p) \arrow[densely dotted, "v"]{ld} \\
 & M_0(p).
 \end{tikzcd}
 \end{center}
@@ -1375,12 +1378,12 @@ At odd primes, this turns out to be the \(v_1\)--self-map \(v\co M_{2(p-1)}(p) \
 
 This admits many generalizations.  First, different powers \(v_1^j\) of the section \(v_1\) also give rise to homotopy elements \(\alpha_{j/1} \in \pi_{2(p-1)j} M_0(p)\).  These have varying orders of divisibility, and we write \(\alpha_{j/k}\) for the element of \(\pi_* \S\) satisfying \(p^{k-1} \alpha_{j/k} = \alpha_{j/1}\).  Additionally, each Moore spectrum supports an Adams \(v_1\)--self--map of the form \[v(p^j) \co M_{|v_1| p^{j-1}}(p^j) \to M_0(p^j),\] which collectively form commutative diagrams of the shape
 \begin{center}
-\begin{tikzcd}
+\begin{tikzcd}[row sep=1.2em]
 M_{p \cdot |v_1| p^{j-1}}(p^j) \arrow["v(p^j)^p"]{r} \arrow{d} & M_0(p^j) \arrow{d} \\
 M_{|v_1|p^j}(p^{j+1}) \arrow["v(p^{j+1})"]{r} & M_0(p^{j+1}).
 \end{tikzcd}
 \end{center}
-The other invariant functions described in \Cref{IdIsAnInvariantIdeal} (e.g., \(v_d\) modulo \(I_d\)) also give rise to elements in \(H^*(\moduli{fg}^{\ge d}; \omega^{\otimes *})\), which map to the \(BP\)--Adams \(E_2\)--term and which sometimes survive the spectral sequence to give rise to homotopy elements of the generalized Moore spectra \(M_0(v^I)\).  Homotopy elements arising in this way are collectively referred to as \index{Greek letter family}\textit{Greek letter families}~\cite[Section 3]{MRW}.
+The other invariant functions described in \Cref{IdIsAnInvariantIdeal} (e.g., \(v_d\) modulo \(I_d\)) also give rise to elements in \(H^*(\moduli{fg}^{\ge d}; \omega^{\otimes *})\), which map to the \(BP\)--Adams \(E_2\)--term and which sometimes survive the spectral sequence to give rise to homotopy elements of the generalized Moore spectra \(M_0(v^I)\).  Homotopy elements arising in this way are referred to as \index{Greek letter family}\textit{Greek letter families}~\cite[Section 3]{MRW}.
 \end{example}
 
 \begin{remark}\label{GreekLetterElements}
