--- a/quillen.tex
+++ b/quillen.tex
@@ -927,10 +927,12 @@ a_\alpha(t) & = \prod_{j=0}^\infty a_j(t)^{\alpha_j}.
 There is the universal formula \[P^{C_n}(u_m) = \sum_{|\alpha| \le m} w^{m - |\alpha|} a_\alpha(t) s_\alpha(u_m).\]
 \end{corollary}
 \begin{proof}
-Writing \(\phi\) for the canonical Thom isomorphism associated to \(MU\)--cohomology, this follows from compatibility of \(\phi\) with the \(MU\)--power operations (as in the construction given in \Cref{QuillenPowerOpnsSection}), the splitting principle, multiplicativity of power operations, and application of the properties of Landweber--Novikov operations:
+Writing \(\phi\) for the canonical Thom isomorphism associated to \(MU\)--cohomology, the main new observation is 
 \begin{align*}
-P^{C_n}(u_m) & = P^{C_n}(s_m(\phi(1))) = P^{C_n}(\phi(c_m(\xi_m))) = \phi(P^{C_n}(c_m(\xi_m))) \\
-& = \phi(P^{C_n}(c_1(\L_1) \cdots c_1(\L_m))) = \phi(P^{C_n}(c_1(\L_1)) \cdots P^{C_n}(c_1(\L_m))) \\
+P^{C_n}(u_m) & = \phi(P^{C_n}(c_m(\xi_m))). \\
+\intertext{From here, we apply the splitting principle, multiplicativity of power operations, and application of the properties of Landweber--Novikov operations:}
+\phi(P^{C_n}(c_m(\xi_m))) & = \phi(P^{C_n}(c_1(\L_1) \cdots c_1(\L_m))) \\
+& = \phi(P^{C_n}(c_1(\L_1)) \cdots P^{C_n}(c_1(\L_m))) \\
 & = \phi\left(\left(\sum_{|\alpha| \le 1} w^{1 - |\alpha|} a_\alpha(t) c_\alpha(\L_1)\right) \cdots \left( \sum_{|\alpha| \le 1} w^{1 - |\alpha|} a_\alpha(t) c_\alpha(\L_m) \right)\right) \\
 & = \phi\left(\sum_{|\alpha| \le m} w^{m - |\alpha|} a_\alpha(t) c_\alpha(\L_1 \oplus \cdots \oplus \L_m)\right) \\
 & = \phi\left(\sum_{|\alpha| \le m} w^{m - |\alpha|} a_\alpha(t) c_\alpha(\xi_m) \right) = \sum_{|\alpha| \le m} w^{m - |\alpha|} a_\alpha(t) s_\alpha(u_m). \qedhere
