--- a/preface.tex
+++ b/preface.tex
@@ -33,7 +33,7 @@ The bulk of this book began as a set of lecture notes for a topics course\footno
 
 This book also draws on a lot of unpublished material.  The topology community gets some flak for this reluctance to publish certain documents, but I think it is to our credit that they are made available anyway, essentially without redaction.  Reference materials of this sort which have influenced this book include: Matthew Ando's \textit{Dieudonn\'e Crystals Associated to Lubin--Tate Formal Groups}; Michael Hopkins's \textit{Complex Oriented Cohomology Theories and the Language of Stacks}; Jacob Lurie's \textit{Chromatic Homotopy (252x)}; Haynes Miller's \textit{Notes on Cobordism}; Charles Rezk's \textit{Elliptic Cohomology and Elliptic Curves}, as well as his \textit{Notes on the Hopkins--Miller Theorem}, and his \textit{Supplementary Notes for Math 512}; Neil Strickland's \textit{Formal Schemes for $K$--Theory Spaces} as well as his \textit{Functorial Philosophy for Formal Phenomena}; the Hopf archive preprint version of the Ando--Hopkins--Strickland article \textit{Elliptic Spectra, the Witten Genus, and the Theorem of the Cube}\footnote{This earlier version contains a lot of information that didn't make it to publication, as the referee (perhaps rightly) found it too dense to make heads or tails of.  Once the reader already has the sketch of the argument established, however, the original version is a truly invaluable resource to go back and re-read.}; and the unpublished Ando--Hopkins--Strickland article \textit{Elliptic Cohomology of $BO\<8\>$ in Positive Characteristic}, recovered from the mists of time by Gerd Laures\footnote{There is a bit of a funny story here: none of the authors of this article could find their own preprint, but one of their old graduate students had held on to a paper copy.  In their defense, two decades had passed---but that in turn only makes Gerd's organizational skills more heroic.}.  I would not have understood the material presented here without access to these resources, nevermind the supplementary guidance.
 
-In addition to their inquisitive presences in the lecture hall, the students who took the Harvard topics course under me often contributed directly to the notes.  These contributors are: Eva Belmont, Hood Chatham (especially his marvelous spectral sequence package, \texttt{spectralsequences}), Dexter Chua (an outside consultant who translated the picture in \Cref{MfgPicture} from a scribble on a scrap of paper into something of professional caliber, who provided a mountain of valuable feedback, and who came up with the book's clever epigraph), Arun Debray (a student at UT--Austin), Jun Hou Fung, Jeremy Hahn (especially the material in \Cref{ComplexBordismChapter} and \Cref{JuvitopTalkSection}), Mauro Porta, Krishanu Sankar, Danny Shi, and Allen Yuan (especially, again, \Cref{JuvitopTalkSection}, which I might have never tried to understand without his insistence that I speak about it and his further help in preparing that talk).
+In addition to their inquisitive presences in the lecture hall, the students who took the Harvard topics course under me often contributed directly to the notes.  These contributors are: Eva Belmont, Hood Chatham (especially his marvelous spectral sequence package, \texttt{spectralsequences}), Dexter Chua (an outside consultant who translated the picture in \Cref{MfgPicture} from a scribble on a scrap of paper into something of professional caliber, who provided a mountain of valuable feedback, and who came up with the book's clever epigraph), Arun Debray (a student at UT--Austin), Jun Hou Fung, Jeremy Hahn (especially the material in \Cref{ComplexBordismChapter} and \Cref{JuvitopTalkSection}), Mauro Porta, Krishanu Sankar, Danny Shi, and Allen Yuan (especially, again, \Cref{JuvitopTalkSection}, which I may never have tried to understand without his insistence that I speak about it and his further help in preparing that talk).
 
 More broadly, the following people contributed to the course just by attending, where I have highlighted those who additionally survived to the end of the semester: Colin Aitken, Adam Al-Natsheh, \textbf{Eva Belmont}, Jason Bland, Dorin Boger, \textbf{Lukas Brantner}, \textbf{Christian Carrick}, \textbf{Hood Chatham}, David Corwin, \textbf{Jun Hou Fung}, \textbf{Meng Guo}, \textbf{Jeremy Hahn}, Changho Han, Chi-Yun Hsu, \textbf{Erick Knight}, Benjamin Landon, Gabriel Long, Yusheng Luo, Jake Marcinek, \textbf{Jake McNamara}, \textbf{Akhil Mathew}, Max Menzies, Morgan Opie, Alexander Perry, Mauro Porta, \textbf{Krishanu Sankar}, \textbf{Jay Shah}, Ananth Shankar, \textbf{Danny Shi}, Koji Shimizu, Geoffrey Smith, Hunter Spinik, Philip Tynan, Yi Xie, David Yang, Zijian Yao, Lynnelle Ye, Chenglong Yu, \textbf{Allen Yuan}, Adrian Zahariuc, Yifei Zhao, Rong Zhou, and Yihang Zhu.  Their energy and enthusiasm were overwhelming---I felt duty-bound to keep telling them things they didn't already know, and despite my best efforts to keep out ahead I also felt like they were constantly nipping at my heels.  As I've gone through my notes during the editing process, it has been astonishing to see how reliably they asked exactly the right question at exactly the right time, often despite my own confusion.  They're a \emph{very} bright group.  Of the highlighted names, Erick Knight deserves special mention: he was an arithmetic geometer living among the rest of us topologists, and he attentively listened to me butcher his native field without once making me feel self-conscious.\footnote{Between him and Dorin, I do wonder if there's a Fossey-esque novel in the works: \textit{Topologists in the Mists}.  I hope we came across as gentle creatures, uncannily similar to proper mathematicians once they got to know us.}
 
@@ -45,3 +45,5 @@ Thanks to my many friends here, and thanks also to Thomas Dunning especially.  T
 
 \vspace{2\baselineskip}
 \hspace{3em} ------------Eric
+
+\hspace{7em} May 27{\th}, 2017
